edited properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8092
 
 #Email specific properties
-spring.mail.username=XXXX@gmail.com
-spring.mail.password=xxxx
+spring.mail.username=keyurchotaliyakk@gmail.com
+spring.mail.password=7359774149
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 
